--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </nav>
         <div class="wrapper">
             <div id="filler"></div>
-            <div id="about">
+            <div id="about" class="mainDiv">
                 <h1 class="sectionTitle" align="center">About Me</h1>
                 <div class="row">
                     <p>Hello! Thanks for checking out my personal website! It's still under construction, but feel free to take a look around and give feedback!</p>
@@ -64,7 +64,7 @@
                     <p>I'm passionate about bridging the diversity gap in the technology industry, as well as increasing visibility for the Asian American LGBTQ population. In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium, trying to relive my figure skating days at the U of I ice rink and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
                 </div>
             </div>
-            <div id="education">
+            <div id="education" class="mainDiv">
                 <h1 class="sectionTitle" align="center">Education</h1>
                 <div class="row">
                     <div class="col-md-3">
@@ -80,7 +80,7 @@
                     </div>
                 </div>
             </div>
-            <div id="experience">
+            <div id="experience" class="mainDiv">
                 <h1 class="sectionTitle" align="center">Experience</h1>
                 <div class="row">
                     <div class="col-md-3 companyDiv">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
             </div>
-            <div id="projects">
+            <div id="projects" class="mainDiv">
                 <h1 class="sectionTitle" align="center">Projects</h1>
                 <div class="row">
                     <div class="col-md-8">
@@ -207,7 +207,7 @@
                     </div>
                 </div>
             </div>
-            <div id="skills">
+            <div id="skills" class="mainDiv">
                 <h1 class="sectionTitle" align="center">Skills</h1>
                 <ul id="skillLevelLegend" class="text-center">
                     <li class="advanced">Advanced</li>
@@ -277,7 +277,7 @@
                     </tbody>
                 </table>
             </div>
-            <div id="contact">
+            <div id="contact" class="mainDiv">
                 <h1 class="sectionTitle" align="center">Contact Me</h1>
                 <div class="row">
                     <form role="form" method="POST" action="http://formspree.io/elchao96@gmail.com">
