--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@
                     <div class="col-md-8">
                         <h4><a href="http://www.bemisspossible.com">Miss Possible Website</a></h4>
                         <ul>
-                            <li>HTML, CSS, Javascript, jQuery, PHP, MySQL, WordPress</li>
-                            <li>Collaborators: Kelly Lin, Elyce Heffez, Supriya Hobbs</li>
+                            <li><i>Technologies Used:</i> HTML, CSS, Javascript, jQuery, PHP, MySQL, WordPress</li>
+                            <li><i>Collaborators:</i> Kelly Lin, Elyce Heffez, Supriya Hobbs</li>
+                            <li>The main website for Miss Possible, an educational toy startup that is working to empower more girls to dream big. Our mission is to show girls great role models in STEM through dolls. Each doll will be accompanied by an app that allows these role models to teach STEM concepts and skills through hands-on activities.</li>
                         </ul>
                     </div>
                     <div class="col-md-3 projectDiv">
@@ -171,9 +172,10 @@
                     <div class="col-md-8">
                         <h4><a href="http://recourser.herokuapp.com">Recourser</a></h4>
                         <ul>
-                            <li>HTML, CSS, jQuery, Python, Flask</li>
-                            <li>Collaborated with: Andrey Zaytsev, Dingcheng Yue, Brianna Ifft</li>
-                            <li>MHacks 2013</li>
+                            <li><i>Technologies Used:</i> HTML, CSS, jQuery, Python, Flask</li>
+                            <li><i>Collaborators:</i> Andrey Zaytsev, Dingcheng Yue, Brianna Ifft</li>
+                            <li><i>Event:</i> MHacks 2013</li>
+                            <li>Recourser serves as a website that allows students currently at UIUC to decide their 4-year plan for college. It shows classes, credit hours, and prerequisites, and allows for students to add or subtract semesters and classes.</li>
                         </ul>
                     </div>
                     <div class="col-md-3 projectDiv">
@@ -184,9 +186,10 @@
                     <div class="col-md-8">
                         <h4><a href="http://web.engr.illinois.edu/~bifft2">Where's Waldo International</a></h4>
                         <ul>
-                            <li>HTML, CSS, Javascript, Google Maps API, social media APIs</li>
-                            <li>Collaborated with: Brianna Ifft, Robin Sturm, Corly Leung</li>
-                            <li>Facebook Midwest Regional Hackathon 2013</li>
+                            <li><i>Technologies Used:</i> HTML, CSS, Javascript, Google Maps API, social media APIs</li>
+                            <li><i>Collaborators:</i> Brianna Ifft, Robin Sturm, Corly Leung</li>
+                            <li><i>Event:</i> Facebook Midwest Regional Hackathon 2013</li>
+                            <li>This is a web-based game that utilizes the Google Maps API to have a user play Where's Waldo. Waldo is placed on a random location and the user moves a marker until he/she finds it. It keeps track of the time taken to do so and gives a score based on it.</li>
                         </ul>
                     </div>
                     <div class="col-md-3 projectDiv">
@@ -197,9 +200,10 @@
                     <div class="col-md-8">
                         <h4><a href="http://wcssignin.web.engr.illinois.edu/">WCS Sign In Application</a></h4>
                         <ul>
-                            <li>HTML, CSS, jQuery, PHP, MySQL</li>
-                            <li>Collaborated with: Khulan Myagmadorj, Anne Dalidonis, Kavya Gundavarum, Andrea Fitzpatrick, Robin Sturm, Violet Zou, Eva Shih, Brianna Ifft, Jenny Cheng, Angela Ding</li>
-                            <li>UIUC WCS Tech Team 2013</li>
+                            <li><i>Technologies Used:</i> HTML, CSS, jQuery, PHP, MySQL</li>
+                            <li><i>Collaborators:</i> Khulan Myagmadorj, Anne Dalidonis, Kavya Gundavarum, Andrea Fitzpatrick, Robin Sturm, Violet Zou, Eva Shih, Brianna Ifft, Jenny Cheng, Angela Ding</li>
+                            <li><i>Event:</i> UIUC WCS Tech Team 2013</li>
+                            <li>This is a sign-in application for UIUC's Women in Computer Science group to keep track of attendance at different events. It provides an interface for each member to see their own points and active member status, as well as generates event codes to prevent long lines to sign in.</li>
                         </ul>
                     </div>
                     <div class="col-md-3 projectDiv">
