urls more clean now

--- a/WCS/index.html
+++ b/WCS/index.html
@@ -25,9 +25,9 @@
         <div class="wrapper">
             <h1>Resources for WCS</h1>
             <ul>
-                <li><a href="lean_in/index.html" target="_blank">Lean In Presentation</a></li>
-                <li><a href="prep/index.html" target="_blank">Technical Interview Preparation Presentation</a></li>
-                <li><a href="sol/index.html" target="_blank">Technical Interview Questions and Solutions</a></li>
+                <li><a href="lean_in/" target="_blank">Lean In Presentation</a></li>
+                <li><a href="prep/" target="_blank">Technical Interview Preparation Presentation</a></li>
+                <li><a href="sol/" target="_blank">Technical Interview Questions and Solutions</a></li>
             </ul>
         </div>
     </body>
