index updated with resume material

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="row">
                     <p>Hello! Thanks for checking out my personal website! It's still under construction, but feel free to take a look around and give feedback!</p>
                     <p>I'm currently pursuing a Bachelor's degree in Computer Science at the University of Illinois at Urbana-Champaign. I'm deeply interested in full-stack web development, as well as software engineering and data analytics, but I'm also looking into expanding my knowledge in other areas of technology as well.</p>
-                    <p>I'm passionate about bridging the diversity gap in the technology industry, as well as increasing visibility for the Asian American LGBTQ population. In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium, trying to relive my figure skating days at the U of I ice rink and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
+                    <p>I'm passionate about bridging the diversity gap in the technology industry, as well as increasing visibility for the Asian American LGBTQ population. I am also deeply interested in software for social good. In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium, trying to relive my figure skating days at the U of I ice rink and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
                 </div>
             </div>
             <div id="education" class="mainDiv">
@@ -90,7 +90,9 @@
                         <h4>Systems Intern</h4>
                         <p><strong>August 2014 - Present</strong></p>
                         <ul>
-                            <li>Currently implementing the database-to-client-side search functionality for a web application that allows users to simulate chemical experiments.</li>
+                            <li>Implementing text-based and boolean search for 27,000+ different compounds.</li>
+                            <li>Restructured database tables to better reflect the published compound data.</li>
+                            <li>Currently implementing back-end parsing of Excel data to be updated into SQL databases using Visual C# and Microsoft Office libraries.</li>
                         </ul>
                     </div>
                 </div>
@@ -102,10 +104,11 @@
                         <h4>Software Engineering Intern</h4>
                         <p><strong>May 2014 - August 2014</strong></p>
                         <ul>
-                            <li>Using the custom Relativity API, Visual C#, and SQL, continued development on an application built on top of kCura’s flagship product Relativity that analyzes and processes 5,000 U.S. patent grants downloaded weekly from a custom Google site.</li>
-                            <li>Added features to the processing of such data that allows the user to sort the patents by over 400 patent classifications.</li>
-                            <li>Added components that processed assignment data for patent grants to keep the assignees/owners of patents up-to-date daily. </li>
-                            <li>Using the Espacenet REST API, added components that validate the patent based on its legal events.</li>
+                            <li>Continued agile development on an application built on top of kCura’s flagship product Relativity that analyzes and processes 5,000 U.S. patent grants downloaded weekly from a custom Google site using the Relativity API and C#.</li>
+                            <li>Added efficient XML parsing features and caching to the processing of such data that allows the user to sort the patents by over 400 patent classifications.</li>
+                            <li>Added components that parsed assignment data in XML format into document fields for patent grants to keep the assignees/owners of patents up-to-date daily.</li>
+                            <li>Validated legal status of patents weekly using the Espacenet REST API.</li>
+                            <li>Unit tested all added components extensively using Rhino Mocks.</li>
                         </ul>
                     </div>
                 </div>
@@ -117,7 +120,7 @@
                         <h4>Web Developer</h4>
                         <p><strong>February 2014 - Present</strong></p>
                         <ul>
-                            <li>Developed and maintaining the website for Miss Possible (<a href="http://www.bemisspossible.com" target="_blank">http://www.bemisspossible.com</a>), a startup that is focused on empowering girls by providing them strong female role models through dolls as well as developing apps that let girls learn about these role models and do hands-on activities led by them.</li>
+                            <li>Developed and maintaining the website for Miss Possible (<a href="http://www.bemisspossible.com" target="_blank">bemisspossible.com</a>), a startup that is focused on empowering girls by providing them strong female role models through dolls as well as developing apps that let girls learn about these role models and do hands-on activities led by them.</li>
                             <li>Assisted in using social media and other mediums to market Miss Possible’s <a href="https://www.indiegogo.com/projects/miss-possible-dolls-to-inspire-girls-across-generations">Indiegogo campaign</a> that raised $85,755.</li>
                         </ul>
                     </div>
@@ -130,10 +133,9 @@
                         <h4>GBS-HRSS Information Technology Development Organization Intern</h4>
                         <p><strong>July 2013 - August 2013</strong></p>
                         <ul>
-                            <li>Assisted in entering necessary data regarding enterprise architecture into the data repository MEGA.</li>
-		                    <li>Prepared a training presentation regarding MEGA and its functions for team members. </li>
-		                    <li>Assisted in the testing of an in-house application on various mobile operating systems and Internet browsers. </li>
-		                    <li>Collated results from testing parts of P&#38;G Human Resources Services &#38; Solutions' Business Continuity Plan.</li>
+                            <li>Entered business impact information regarding enterprise architecture into MEGA and gave an hour-long training for team members regarding it.</li>
+                            <li>Tested user interface standardization of an in-house application on various mobile operating systems and Internet browsers, provided detailed documentation.</li>
+                            <li>Collated results for management after testing P#38'G’s HRSS Business Continuity Plan, as well as surveyed organization members regarding required hardware.</li>
                         </ul>
                     </div>
                 </div>
@@ -145,10 +147,9 @@
                         <h4>Information Technology Application Development Intern</h4>
                         <p><strong>June 2012 - August 2012</strong></p>
                         <ul>
-                            <li>Designed the user interface for one of Paycor's in-house web applications using HTML and CSS.</li>
-		                    <li>Analyzed video software options to help Paycor with offshore employees in Mumbai, India.</li>
-		                    <li>Coordinated knowledge transfer documenetation with offshore employees in Mumbai, India.</li>
-		                    <li>Developed a data-driven version of Paycor's training application using Microsoft .NET Visual C#.</li>
+                            <li>Entered business impact information regarding enterprise architecture into MEGA and gave an hour-long training for team members regarding it.</li>
+                            <li>Tested user interface standardization of an in-house application on various mobile operating systems and Internet browsers, provided detailed documentation.</li>
+                            <li>Collated results for management after testing P#38'G’s HRSS Business Continuity Plan, as well as surveyed organization members regarding required hardware.</li>
                         </ul>
                     </div>
                 </div>
