more small corrections

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <ul>
                             <li>Entered business impact information regarding enterprise architecture into MEGA and gave an hour-long training for team members regarding it.</li>
                             <li>Tested user interface standardization of an in-house application on various mobile operating systems and Internet browsers, provided detailed documentation.</li>
-                            <li>Collated results for management after testing P#38'G’s HRSS Business Continuity Plan, as well as surveyed organization members regarding required hardware.</li>
+                            <li>Collated results for management after testing P&#39;G’s HRSS Business Continuity Plan, as well as surveyed organization members regarding required hardware.</li>
                         </ul>
                     </div>
                 </div>
@@ -147,9 +147,9 @@
                         <h4>Information Technology Application Development Intern</h4>
                         <p><strong>June 2012 - August 2012</strong></p>
                         <ul>
-                            <li>Entered business impact information regarding enterprise architecture into MEGA and gave an hour-long training for team members regarding it.</li>
-                            <li>Tested user interface standardization of an in-house application on various mobile operating systems and Internet browsers, provided detailed documentation.</li>
-                            <li>Collated results for management after testing P#38'G’s HRSS Business Continuity Plan, as well as surveyed organization members regarding required hardware.</li>
+                            <li>Styled the UI for one of Paycor’s in-house web applications, learning on the job.</li>
+                            <li>Coordinated knowledge transfer documentation with offshore employees.</li>
+                            <li>Developed a data-driven version of Paycor’s online training application with binary-to-PDF rendering and automatic UI updates based on query strings.</li>
                         </ul>
                     </div>
                 </div>
