--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                 <div class="row">
                     <p>Hello! Thanks for checking out my personal website! It's still under construction, but feel free to take a look around and give feedback!</p>
                     <p>I'm currently pursuing a Bachelor's degree in Computer Science at the University of Illinois at Urbana-Champaign. I'm deeply interested in full-stack web development, as well as software engineering and data analytics, but I'm also looking into expanding my knowledge in other areas of technology as well.</p>
-                    <p>I'm passionate about bridging the diversity gap in the technology industry, as well as increasing visibility for the Asian American LGBTQ population. I am also deeply interested in software for social good. In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium, trying to relive my figure skating days at the U of I ice rink and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
+                    <p>I'm passionate about bridging the diversity gap in the technology industry, as well as increasing visibility for the Asian American LGBTQ population. I am also deeply interested in software for social good.</p>
+                    <p>In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium, trying to relive my figure skating days at the U of I ice rink and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
                 </div>
             </div>
             <div id="education" class="mainDiv">
@@ -156,6 +157,19 @@
             </div>
             <div id="projects" class="mainDiv">
                 <h1 class="sectionTitle" align="center">Projects</h1>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h4><a href="http://queerspeaks.herokuapp.com">Queer Speaks</a></h4>
+                        <ul>
+                            <li><i>Technologies:</i> HTML, CSS, Javascript, jQuery</li>
+                            <li>Migrating from using PHP, Azure hosting and SQL databases to using Flask, Heroku and SQLite</li>
+                            <li>I started this project at WildHacks after digging through the Internet and not finding any viable resources for Asian American and Pacific Islander LGBTQ teens. Because I feel that the challenges of gaining acceptance from families for their sexual orientation is harder for the AAPI queer population, I'm developing this website that is a hybrid between Facebook and Medium to allow these teens to form a community online.</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h2>IN PROGRESS</h2>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-8">
                         <h4><a href="http://www.bemisspossible.com">Miss Possible Website</a></h4>
