adding more information to skills

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
             </div>
             <div id="skills" class="mainDiv">
                 <h1 class="sectionTitle" align="center">Skills</h1>
+                <p>I primarily focus on web development, particularly full-stack development. I am also interested in software engineering.</p>
                 <ul id="skillLevelLegend" class="text-center">
                     <li class="advanced">Advanced</li>
                     <li class="proficient">Proficient</li>
@@ -268,7 +269,9 @@
                                 <ul class="skillsList">
                                     <li class="proficient">ASP.NET MVC</li>
                                     <li class="basic">PHP</li>
-                                    <li class="basic">MySQL/SQL</li>
+                                    <li class="basic">MySQL</li>
+                                    <li class="basic">SQL</li>
+                                    <li class="basic">Flask</li>
                                 </ul>
                             </td>
                         </tr>
@@ -284,12 +287,23 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>Design</td>
+                            <td>Scientific Computing</td>
+                            <td>
+                                <ul class="skillsList">
+                                    <li class="basic">Numpy</li>
+                                    <li class="basic">Scipy</li>
+                                    <li class="basic">Matplotlib</li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Design and Animation</td>
                             <td>
                                 <ul class="skillsList">
                                     <li class="proficient">Photoshop</li>
                                     <li class="proficient">Illustrator</li>
                                     <li class="proficient">InDesign</li>
+                                    <li class="basic">Edge Animate</li>
                                 </ul>
                             </td>
                         </tr>
@@ -318,7 +332,7 @@
                 <br/><br/>
             </div>
         </div>
-        <div id="push"></div>
+        <!--<div id="push"></div>-->
         <footer>
             <ul id="socialMediaLinks" class="text-center">
                 <li><a href="mailto:elchao96@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></li>
