adding more projects

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                         <li class="menuItem"><a href="#" class="scroll-link" data-id="projects">Projects</a></li>
                         <li class="menuItem"><a href="#" class="scroll-link" data-id="skills">Skills</a></li>
                         <li class="menuItem"><a href="#" class="scroll-link" data-id="contact">Contact Me</a></li>
+                        <li class="menuItem"><a href="/blog">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -59,8 +60,8 @@
             <div id="about" class="mainDiv">
                 <h1 class="sectionTitle" align="center">About Me</h1>
                 <div class="row">
-                    <p>Hello! Thanks for checking out my personal website! It's still under construction, but feel free to take a look around and give feedback!</p>
-                    <p>I'm currently pursuing a Bachelor's degree in Computer Science at the University of Illinois at Urbana-Champaign. I'm deeply interested in full-stack web development, as well as software engineering and data analytics, but I'm also looking into expanding my knowledge in other areas of technology as well.</p>
+                    <p>Hello! Thanks for checking out my personal website! I am always continually improving it, so feel free to give feedback!</p>
+                    <p>I'm currently pursuing a Bachelor's degree in <a href="http://cs.illinois.edu" target="_blank">Computer Science</a> at the <a href="http://illinois.edu" target="_blank">University of Illinois at Urbana-Champaign</a>. I'm deeply interested in full-stack web development, as well as software engineering and data analytics, but I'm also looking into expanding my knowledge in other areas of technology as well.</p>
                     <p>I'm passionate about bridging the diversity gap in the technology industry, as well as increasing visibility for the Asian American LGBTQ population. I am also deeply interested in software for social good.</p>
                     <p>In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium, trying to relive my figure skating days at the U of I ice rink and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
                 </div>
@@ -74,9 +75,9 @@
                     <div class="col-md-9">
                         <h4>B.S. Computer Science, University of Illinois at Urbana-Champaign</h4>
                         <ul>
-                            <li>Women in Computer Science - Mentoring Director, Tech Team Member</li>
-                            <li>Society of Women Engineers - Recruitment CS Liaison, Team Tech Member</li>
-                            <li>Engineering Student Alumni Ambassador</li>
+                            <li><a href="http://illinoiswcs.org" target="_blank">Women in Computer Science</a> - Mentoring Director, Tech Team Member</li>
+                            <li><a href="http://societyofwomenengineers.illinois.edu/" target="_blank">Society of Women Engineers</a> - Recruitment CS Liaison, Team Tech Member</li>
+                            <li><a href="https://wiki.cites.illinois.edu/wiki/display/esaa/Home" target="_blank">Engineering Student Alumni Ambassador</a></li>
                         </ul>
                     </div>
                 </div>
@@ -85,7 +86,7 @@
                 <h1 class="sectionTitle" align="center">Experience</h1>
                 <div class="row">
                     <div class="col-md-3 companyDiv">
-                        <h2 class="companyName">Dow Chemical Company</h2>
+                        <h2 class="companyName"><a href="http://researchpark.illinois.edu/directory/dow-chemical" target="_blank">Dow Chemical Company</a></h2>
                     </div>
                     <div class="col-md-9">
                         <h4>Systems Intern</h4>
@@ -99,7 +100,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-3 companyDiv">
-                        <h2 class="companyName">kCura</h2>
+                        <h2 class="companyName"><a href="https://www.kcura.com/" target="_blank">kCura</a></h2>
                     </div>
                     <div class="col-md-9">
                         <h4>Software Engineering Intern</h4>
@@ -115,7 +116,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-3 companyDiv">
-                        <h2 class="companyName">Miss Possible</h2>
+                        <h2 class="companyName"><a href="http://www.bemisspossible.com/" target="_blank">Miss Possible</a></h2>
                     </div>
                     <div class="col-md-9">
                         <h4>Web Developer</h4>
@@ -128,7 +129,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-3 companyDiv">
-                        <h2 class="companyName">Procter &#38; Gamble</h2>
+                        <h2 class="companyName"><a href="http://www.pg.com/" target="_blank">Procter &#38; Gamble</a></h2>
                     </div>
                     <div class="col-md-9">
                         <h4>GBS-HRSS Information Technology Development Organization Intern</h4>
@@ -142,7 +143,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-3 companyDiv">
-                        <h2 class="companyName">Paycor, Inc.</h2>
+                        <h2 class="companyName"><a href="http://www.paycor.com/" target="_blank">Paycor, Inc.</a></h2>
                     </div>
                     <div class="col-md-9">
                         <h4>Information Technology Application Development Intern</h4>
@@ -157,6 +158,7 @@
             </div>
             <div id="projects" class="mainDiv">
                 <h1 class="sectionTitle" align="center">Projects</h1>
+                <p>You can check out all of my work on <a href="https://github.com/elchao96" target="_blank">Github</a>.</p>
                 <div class="row">
                     <div class="col-md-8">
                         <h4><a href="http://queerspeaks.herokuapp.com">Queer Speaks</a></h4>
@@ -168,6 +170,15 @@
                     </div>
                     <div class="col-md-3">
                         <h2>IN PROGRESS</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h4><a href="/blog">Personal Blog</a></h4>
+                        <ul>
+                            <li><i>Technologies:</i> HTML, CSS, Javascript, Jekyll</li>
+                            <li>I followed Barry Clark's tutorial to host a static blog in a subdirectory of my website. It is still incredibly under construction as I just managed to fix the linking issues with the permalinks. I like that Jekyll is entirely static and renders posts based on given templates and markdown text. I'm hoping to use this blog to write more casual notes about my goals, my projects and other things that I have encountered along the way. I write more serious and interpretive pieces on my <a href="https://medium.com/@emchao" target="_blank">Medium</a>.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="row">
@@ -304,6 +315,17 @@
                                     <li class="proficient">Illustrator</li>
                                     <li class="proficient">InDesign</li>
                                     <li class="basic">Edge Animate</li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Version Control Systems</td>
+                            <td>
+                                <ul class="skillsList">
+                                    <li class="proficient">Git</li>
+                                    <li class="proficient">Mercurial</li>
+                                    <li class="proficient">SVN</li>
+                                    <li class="proficient">Team Foundation Server</li>
                                 </ul>
                             </td>
                         </tr>
