added resume link

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                     <p>I'm passionate about bridging the diversity gap in the technology industry, as well as increasing visibility for the Asian American LGBTQ population. I am also deeply interested in software for social good.</p>
                     <p>In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium, trying to relive my figure skating days at the U of I ice rink and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
                 </div>
+                <div class="row">
+                    <p align="center"><a href="https://onedrive.live.com/redir?resid=397C180F47B5E43A!7224&authkey=!AFgNFOhOHeVV8Io&ithint=file%2cpdf"><button class="btn btn-default" id="resumeButton">Download My Resume</button></a></p>
+                </div>
             </div>
             <div id="education" class="mainDiv">
                 <h1 class="sectionTitle" align="center">Education</h1>
@@ -160,7 +163,7 @@
                 <h1 class="sectionTitle" align="center">Projects</h1>
                 <p>You can check out all of my work on <a href="https://github.com/elchao96" target="_blank">Github</a>.</p>
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-9">
                         <h4><a href="http://queerspeaks.herokuapp.com">Queer Speaks</a></h4>
                         <ul>
                             <li><i>Technologies:</i> HTML, CSS, Javascript, jQuery</li>
@@ -168,21 +171,24 @@
                             <li>I started this project at WildHacks after digging through the Internet and not finding any viable resources for Asian American and Pacific Islander LGBTQ teens. Because I feel that the challenges of gaining acceptance from families for their sexual orientation is harder for the AAPI queer population, I'm developing this website that is a hybrid between Facebook and Medium to allow these teens to form a community online.</li>
                         </ul>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 projectDiv">
                         <h2>IN PROGRESS</h2>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-9">
                         <h4><a href="/blog">Personal Blog</a></h4>
                         <ul>
                             <li><i>Technologies:</i> HTML, CSS, Javascript, Jekyll</li>
                             <li>I followed Barry Clark's tutorial to host a static blog in a subdirectory of my website. It is still incredibly under construction as I just managed to fix the linking issues with the permalinks. I like that Jekyll is entirely static and renders posts based on given templates and markdown text. I'm hoping to use this blog to write more casual notes about my goals, my projects and other things that I have encountered along the way. I write more serious and interpretive pieces on my <a href="https://medium.com/@emchao" target="_blank">Medium</a>.</li>
                         </ul>
                     </div>
+                    <div class="col-md-3 projectDiv">
+                        <h2>IN PROGRESS</h2>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-9">
                         <h4><a href="http://www.bemisspossible.com">Miss Possible Website</a></h4>
                         <ul>
                             <li><i>Technologies Used:</i> HTML, CSS, Javascript, jQuery, PHP, MySQL, WordPress</li>
@@ -195,7 +201,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-9">
                         <h4><a href="http://recourser.herokuapp.com">Recourser</a></h4>
                         <ul>
                             <li><i>Technologies Used:</i> HTML, CSS, jQuery, Python, Flask</li>
@@ -209,7 +215,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-9">
                         <h4><a href="http://web.engr.illinois.edu/~bifft2">Where's Waldo International</a></h4>
                         <ul>
                             <li><i>Technologies Used:</i> HTML, CSS, Javascript, Google Maps API, social media APIs</li>
@@ -223,7 +229,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-9">
                         <h4><a href="http://wcssignin.web.engr.illinois.edu/">WCS Sign In Application</a></h4>
                         <ul>
                             <li><i>Technologies Used:</i> HTML, CSS, jQuery, PHP, MySQL</li>
