added resume link

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <p>In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium, trying to relive my figure skating days at the U of I ice rink and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
                 </div>
                 <div class="row">
-                    <p align="center"><a href="https://onedrive.live.com/redir?resid=397C180F47B5E43A!7224&authkey=!AFgNFOhOHeVV8Io&ithint=file%2cpdf"><button class="btn btn-default btn-large" id="resumeButton">Download My Resume</button></a></p>
+                    <p align="center"><a href="https://onedrive.live.com/redir?resid=397C180F47B5E43A!7224&authkey=!AFgNFOhOHeVV8Io&ithint=file%2cpdf"><button class="btn btn-default btn-lg" id="resumeButton">Download My Resume</button></a></p>
                 </div>
             </div>
             <div id="education" class="mainDiv">
