finishing touches on the presentation

--- a/WCS/prep/index.html
+++ b/WCS/prep/index.html
@@ -131,7 +131,19 @@
 						<li>If I use X sort or search, what is its runtime? Why is it so?</li>
 						<li>What are some corner cases that I have to consider?</li>
 					</ul>
+                    <p>Psst. the solutions for our questions are at <a href="../sol/index.html">http://emilychao.me/WCS/sol/</a></p>
 				</section>
+                
+                <section>
+                    <h2>It's not just about them, it's about you too</h2>
+                    <ul>
+                        <li>Research the company before hand.</li>
+                        <li>Always have a question to ask.</li>
+                        <li>Does this role fit your interests?</li>
+                        <li>Does the company support your learning and career?</li>
+                        <li>Doe you think the company culture fits you?</li>
+                    </ul>
+                </section>
                 
                 <section>
                     <h2>Upcoming Events</h2>
