finishing touches on the presentation

--- a/WCS/prep/index.html
+++ b/WCS/prep/index.html
@@ -90,6 +90,7 @@
                 <section>
                     <h2>It's on my Resume, why ask me about it again?</h2>
                     <ul>
+                        <li>"Tell me about yourself." = Summary of your resume</li>
                         <li>Show clear communication skills.</li>
                         <li>STAR Method: Situation, Task, Action, Result</li>
                         <li>Prepare to talk about challenges and how you overcame them.</li>
