--- a/WCS/prep/index.html
+++ b/WCS/prep/index.html
@@ -47,7 +47,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>WCS Mentoring Technical Interview Practice Session</h1>
+					<h1>WCS/SWE Mentoring Technical Interview Practice Session</h1>
 				</section>
 
 				<section>
