--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
                             <label for="messageInput">Message</label>
                             <textarea class="form-control" name="message" id="messageInput" rows="6" placeholder="Enter Message" tabindex="3" ></textarea>
                         </div>
+                        <input type="text" name="_gotcha" style="display:none"/>
                         <button type="submit" value="Send" class="btn btn-primary" tabindex="4" >Send Message</button>
                     </form>
                 </div>
