--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<title>Emily Chao</title>
 </head>
 <body>
-	<h1>This site is currently under construction, thank you for your patience.
+	<h1>This site is currently under construction, thank you for your patience.</h1>
 </body>
 </html>
