check me out statement

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 </head>
 <body>
 	<h1>This site is currently under construction, thank you for your patience.</h1>
+	<p>In the meantime, check me out on <a href="http://linkedin.com/in/elchao96">LinkedIn</a> or <a href="http://github.com/elchao96">Github</a>.</p>
 </body>
 </html>
