added some necessary files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<title>Emily Chao</title>
 </head>
 <body>
-	<h1>This site is currently under construction, thank you for your patience.</h1>
-	<p>In the meantime, check me out on <a href="http://linkedin.com/in/elchao96">LinkedIn</a> or <a href="http://github.com/elchao96">Github</a>.</p>
+	<div id="main"></div>
 </body>
 </html>
